agrego eventos en la calculadora IMC

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -51,6 +51,7 @@ body {
       justify-content: space-around;
       align-items: center; }
       body .imcCalculator form input {
+        color: black;
         width: 12rem;
         height: 30px;
         font-size: 1rem; }
