--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -64,6 +64,7 @@ body{
             justify-content: space-around;
             align-items: center;
             input{
+                color: black;
                 width: 12rem;
                 height: 30px;
                 font-size: 1rem;
