--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -47,9 +47,9 @@ body{
     .imcCalculator{
         border-radius: 30px;
         background-color: darkblue;
-        width: 40rem;
         height: 25rem;
-        margin: auto;
+        margin-left: 10%;
+        margin-right: 10%;
         display: flex;
         flex-direction: column;
         h2{
@@ -167,12 +167,10 @@ body{
     nav{
         width: 100%;
     }
-    .imcCalculator{
-        width: 300px;
-        height: 200px;
-        .calculatorForm{
-            width: 300px;
-        }
+    body .imcCalculator{
+        height: 400px;
+        margin-left: 0%;
+        margin-right: 0%;
     }
 
 }
