agregamos el score contador

--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -162,6 +162,10 @@ body{
         }
     }
 }
+#score{
+    width: 20%;
+    margin-right: 5%;
+}
 
 @media screen and (max-width: 420px){
     nav{
