--- a/css/estilo.css
+++ b/css/estilo.css
@@ -131,6 +131,10 @@ body {
       font-size: 1rem;
       margin-bottom: 1rem; }
 
+#score {
+  width: 20%;
+  margin-right: 5%; }
+
 @media screen and (max-width: 420px) {
   nav {
     width: 100%; }
