--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,24 +9,6 @@
 
 body {
   background-color: #5700e4; }
-  body nav {
-    background-color: darkblue;
-    display: flex;
-    align-items: center;
-    width: 100%; }
-    body nav h2 {
-      width: 30%;
-      text-align: center;
-      font-size: 2rem; }
-    body nav ul {
-      width: 70%;
-      display: flex;
-      height: 70px;
-      justify-content: center;
-      align-items: center;
-      gap: 10%; }
-      body nav ul li .link {
-        font-size: 1.5rem; }
   body header h1 {
     text-align: center;
     margin-top: 50px;
@@ -73,6 +55,25 @@ body {
     margin-top: 50px; }
     body div h2 {
       text-align: center; }
+
+.nav {
+  background-color: darkblue;
+  display: flex;
+  align-items: center;
+  width: 100%; }
+  .nav h2 {
+    width: 30%;
+    text-align: center;
+    font-size: 2rem; }
+  .nav ul {
+    width: 70%;
+    display: flex;
+    height: 70px;
+    justify-content: center;
+    align-items: center;
+    gap: 10%; }
+    .nav ul li .link {
+      font-size: 1.5rem; }
 
 .nameOfActivity {
   text-align: center;
@@ -142,3 +143,49 @@ body {
     height: 400px;
     margin-left: 0%;
     margin-right: 0%; } }
+
+.container h1 {
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 30px;
+  font-size: 3rem; }
+
+.container .search form {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  width: auto; }
+  .container .search form input {
+    font-family: "Smooch Sans", sans-serif;
+    color: black;
+    height: 2rem;
+    font-size: 14px; }
+  .container .search form button {
+    color: #157203;
+    font-size: 1.5rem;
+    width: 2rem;
+    font-weight: bolder; }
+
+.li-container ul li {
+  border-bottom: black 1px solid;
+  display: flex;
+  flex-direction: column;
+  background-color: darkblue;
+  width: 90%;
+  margin: auto;
+  gap: 10px;
+  padding: 2%; }
+  .li-container ul li p {
+    word-wrap: break-word;
+    height: auto; }
+  .li-container ul li button {
+    align-self: flex-end;
+    margin-right: 30px;
+    color: #af0101;
+    font-size: 1.5rem;
+    width: 2rem;
+    font-weight: bolder; }
+
+.empty p {
+  text-align: center; }
