mediaqueries de la pagina de registro

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -14,7 +14,7 @@ body {
   height: 100%;
   width: 100%; }
 
-.content {
+.content, .bodyRegister {
   position: relative;
   padding: 5%; }
 
@@ -47,7 +47,7 @@ body {
 
 header {
   margin-top: 80px; }
-  header #title {
+  header .title {
     font-size: 4rem;
     text-align: center; }
 
@@ -145,22 +145,43 @@ header {
 
 /*Media Queries de 420px*/
 @media screen and (max-width: 420px) {
-  .content .nav {
+  .nav {
     flex-direction: column; }
-    .content .nav h2 {
+    .nav h2 {
       font-size: 3.5rem;
       text-align: center;
       order: 1; }
-    .content .nav ul {
+    .nav ul {
       order: 3;
       flex-direction: column;
       justify-content: center;
       align-self: center; }
-      .content .nav ul li a {
+      .nav ul li a {
         font-size: 1.5rem; }
-    .content .nav h3 {
+    .nav h3 {
       font-size: 1.7rem;
       order: 2;
       position: relative;
       left: 70px;
-      bottom: 50px; } }
+      bottom: 50px; }
+  header .title {
+    font-size: 2.2rem;
+    margin-bottom: 40px; }
+  .containerFormulario h2 {
+    text-align: center; }
+  .containerFormulario #registerForm {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .containerFormulario #registerForm label {
+      font-size: 1.7rem;
+      margin-top: 30px; }
+    .containerFormulario #registerForm input {
+      width: 16rem;
+      height: 2.5rem;
+      background-color: #99ff00;
+      color: #005e00;
+      font-size: 1.3rem; }
+      .containerFormulario #registerForm input:focus {
+        background-color: #99ff00;
+        color: #005e00; } }
